# mlstudio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  USERGUIDE.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
frontend/: README.md
recipe/: meta.yaml
scripts/: bundle_eskapee_schemes.sh  take_screenshots.py
src/mlstudio/: __init__.py  citations.py  cli.py  library.py  nomenclature.py
src/mlstudio/amr/: __init__.py  amrfinderplus.py  interpretation.py
src/mlstudio/api/: __init__.py  server.py
src/mlstudio/calling/: __init__.py  cgmlst.py  fastp_wrapper.py  mlst.py
src/mlstudio/io/: __init__.py  scanner.py
src/mlstudio/profiles/: __init__.py  distance.py  mst.py
src/mlstudio/qc/: __init__.py  assembly.py
src/mlstudio/schemes/: __init__.py  adhoc.py  bigsdb.py  cgmlst_org.py  cgmlst_org_registry.json  pubmlst.py
src/mlstudio/webui/: app.js  index.html  style.css
test_data/: fetch_demo.sh
test_data/demo_folder/.mlstudio/: alleles.tsv  mst.json  summary.tsv
test_data/demo_folder/.mlstudio/calls/: 348fc78807bcc47c.json  51ea2a7b1369e773.json  ce33856b2f3df3d7.json
tests/: test_e2e.py  test_mst.py  test_smoke.py
