[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mlstudio"
version = "0.0.1"
description = "Free, open-source MLST/cgMLST typing and interactive MST visualization for Linux."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "iowa69", email = "sintetico87@gmail.com" }]
keywords = ["mlst", "cgmlst", "bioinformatics", "bacterial-typing", "minimum-spanning-tree"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "pydantic>=2.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "biopython>=1.83",
    "pysam>=0.22",
    "networkx>=3.3",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
mlstudio = "mlstudio.cli:app"

[project.urls]
Homepage = "https://github.com/iowa69/mlstudio"
Repository = "https://github.com/iowa69/mlstudio"
Issues = "https://github.com/iowa69/mlstudio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mlstudio"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
